# gameboy-emulator

./: .gitignore  .travis.yml  CMakeLists.txt  Gui.h  Makefile  README.md  conanfile.txt  main.cpp
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
cpu/: CMakeLists.txt  Cpu.cpp  FlagRegister.cpp
include/: BitOperations.h  CBCode.h  Cartridge.h  CartridgeHeader.h  Cpu.h  File.h  FlagRegister.h  GameBoy.h  Logger.h  MBC1.h  Memory.h  MemoryBankController.h  MemoryController.h  MemoryMap.h  Opcodes.h  Ppu.h  Timer.h
include/Cpu/: CBOperations.h  Cpu.h  Interrupt_Handler.h  Opcodes.h  Operations.h
include/Disassembler/: Disassembler.h  Ring_Buffer.h
include/Graphics/: LCD_Control.h  LCD_Status.h  PPU.h  Pixel.h
include/Gui/: Gui.h  Renderers.h
include/Input/: Input.h  Joypad_Controller.hpp  Keyboard.hpp  Keyboard_Observer.hpp
include/Memory/: Cartridge.h  Memory.h  Memory_Controller.h
include/Sound/: Sound_Controller.h
include/cpu/: CBCode.h  CBOpcodes.h  CBOperations.h  Cpu.h  Disassembler.h  Interrupt_Handler.h  Operations.h
include/graphics/: LCD_Control.h  LCD_Status.h  PPU.h  Pixel.h
include/gui/: Gui.h
include/memory_controllers/: MBC1.h  MBC2.h  Memory.h  MemoryBankController.h
src/: .gb-emu.c.swp  BitOperations.hpp  CMakeLists.txt  Cartridge.cpp  Cpu.cpp  Emulator.c  Emulator.h  File.h  GameBoy.cpp  GameBoy.h  GameBoy.hpp  Logger.cpp  Memory.h  MemoryMap.cpp  Opcodes.cpp  Registers.h  Timer.h  gb-emu.c  main.c  main.cpp  rom-inspector.c
src/App/: CMakeLists.txt  Gui.c  Gui.h  gb-emu.c
src/Cartridge/: CMakeLists.txt  Cartridge_Header.hpp  Memory_Bank_Type.hpp
src/Cpu/: Adressing_Modes.c  Adressing_Modes.cpp  Adressing_Modes.h  Adressing_Modes.hpp  CBOpcodes.h  CBOpcodes.hpp  CBOperations.c  CBOperations.cpp  CBOperations.h  CBOperations.hpp  CMakeLists.txt  Cpu.c  Cpu.cpp  Cpu.h  Cpu.hpp  Interpreter.c  Interpreter.cpp  Interpreter.h  Interpreter.hpp  Interrupt_Handler.cpp  Interrupt_Handler.hpp  Interrupts.c  Interrupts.h  Opcodes.h  Operations.c  Operations.cpp  Operations.h  Operations.hpp  Timer.c  Timer.cpp  Timer.h  Timer.hpp
src/Disassembler/: .Disassembler.c.swp  CMakeLists.txt  Disassembler.c  Disassembler.cpp  Disassembler.h  Disassembler.hpp  extract.py  interpreter.awk  interpreter.c
src/Gameboy/: CMakeLists.txt  Cartridge.c  Cartridge.h  GameBoy.hpp  Gameboy.c  Gameboy.cpp  Gameboy.h  Gameboy.hpp  Rom_Info.c  Rom_Info.h
src/Graphics/: CMakeLists.txt  LCD_Control.c  LCD_Control.cpp  LCD_Control.h  LCD_Control.hpp  LCD_Status.c  LCD_Status.cpp  LCD_Status.h  LCD_Status.hpp  PPU.c  PPU.cpp  PPU.h  PPU.hpp  Pixel.c  Pixel.cpp  Pixel.h  Pixel.hpp
src/Gui/: CMakeLists.txt  Gui.c  Gui.cpp  Gui.h  Gui.hpp  Renderers.cpp  Renderers.h  Renderers.hpp
src/Input/: CMakeLists.txt  Input.cpp  Joypad.c  Joypad.cpp  Joypad.h  Joypad.hpp  Joypad_Controller.cpp  Keyboard.cpp  Keyboard_Observer.hpp
src/InputHandlers/: CMakeLists.txt  Ncurses_Input_Handler.c  Ncurses_Input_Handler.h  SDL2_Input_Handler.c  SDL2_Input_Handler.h
src/Memory/: Addresses.h  Addresses.hpp  CMakeLists.txt  Cartridge.c  Cartridge.cpp  Cartridge.h  Cartridge.hpp  MBC1.cpp  Memory.cpp  Memory_Banks.c  Memory_Banks.h  Memory_Controller.c  Memory_Controller.cpp  Memory_Controller.h  Memory_Controller.hpp  Ram.cpp  Ram.h  Special_Addresses.hpp
src/Renderers/: CMakeLists.txt  Ncurses_Renderer.c  Ncurses_Renderer.h  SDL2_Renderer.c  SDL2_Renderer.h
src/Sound/: CMakeLists.txt  Sound.c  Sound.h
src/Utilities/: BitOperations.c  BitOperations.cpp  BitOperations.h  BitOperations.hpp  CMakeLists.txt  File.c  File.cpp  File.h  File.hpp  Log.h
src/graphics/: CMakeLists.txt  LCD_Control.cpp  LCD_Status.cpp  PPU.cpp  Pixel.cpp
src/gui/: CMakeLists.txt  Gui.cpp
src/imgui/: CMakeLists.txt
tests/: CMakeLists.txt
